--- a/ddd.properties
+++ b/ddd.properties
@@ -1,4 +1,4 @@
 errors.10000=Invalid Parameters
 errors.10100=IDM service error
 errors.10200=Hub service error
-errors.20000=Unexpected exception
+errors.20000={cipher}Unexpected exception
