--- a/ddd.properties
+++ b/ddd.properties
@@ -2,5 +2,5 @@ errors.10000=Invalid Parameters
 errors.10100=IDM service error
 errors.10200=Hub service error
 errors.20000=Unexpected exception
-spring.datasource.username: {cipher}dbuser
+spring.datasource.username: {cipher}FKSAJDFGYOS8F7GLHAKERGFHLSAJ
 spring.datasource.password: {cipher}FKSAJDFGYOS8F7GLHAKERGFHLSAJ
