--- a/ddd.properties
+++ b/ddd.properties
@@ -1,4 +1,4 @@
-errors.10000=Invalid Parameters
+errors.10000=Invalid Parameters old
 errors.10100=IDM service error
 errors.10200=Hub service error
 errors.password=Unexpected exception
