--- a/profile-plat1.properties
+++ b/profile-plat1.properties
@@ -25,7 +25,7 @@ supported.user.profile.statuses=ACTIVE,DELETED,PENDING
 ##############################################
 
 profiledb.jdbc.driverClassName=com.mysql.jdbc.Driver
-profiledb.jdbc.url=jdbc:mysql://localhost:3306/PERMISSION
+profiledb.jdbc.url=jdbc:mysql://plat1-int-mysql-master.leapset.com:3306/USER_PROFILE
 profiledb.jdbc.username=root
 profiledb.jdbc.password=gvt123
 
